out/magnesium/dimagnesocene_h4.out

    -----------------------------------------------------------------------
          Psi4: An Open-Source Ab Initio Electronic Structure Package
                               Psi4 1.9a1.dev12 

                         Git: Rev {master} 6ebe472 dirty


    D. G. A. Smith, L. A. Burns, A. C. Simmonett, R. M. Parrish,
    M. C. Schieber, R. Galvelis, P. Kraus, H. Kruse, R. Di Remigio,
    A. Alenaizan, A. M. James, S. Lehtola, J. P. Misiewicz, M. Scheurer,
    R. A. Shaw, J. B. Schriber, Y. Xie, Z. L. Glick, D. A. Sirianni,
    J. S. O'Brien, J. M. Waldrop, A. Kumar, E. G. Hohenstein,
    B. P. Pritchard, B. R. Brooks, H. F. Schaefer III, A. Yu. Sokolov,
    K. Patkowski, A. E. DePrince III, U. Bozkaya, R. A. King,
    F. A. Evangelista, J. M. Turney, T. D. Crawford, C. D. Sherrill,
    J. Chem. Phys. 152(18) 184108 (2020). https://doi.org/10.1063/5.0006002

                            Additional Code Authors
    E. T. Seidl, C. L. Janssen, E. F. Valeev, M. L. Leininger,
    J. F. Gonthier, R. M. Richard, H. R. McAlexander, M. Saitow, X. Wang,
    P. Verma, M. H. Lechner, A. Jiang, S. Behnle, A. G. Heide,
    M. F. Herbst, and D. L. Poole

             Previous Authors, Complete List of Code Contributors,
                       and Citations for Specific Modules
    https://github.com/psi4/psi4/blob/master/codemeta.json
    https://github.com/psi4/psi4/graphs/contributors
    http://psicode.org/psi4manual/master/introduction.html#citing-psifour

    -----------------------------------------------------------------------


    Psi4 started on: Thursday, 21 September 2023 09:46AM

    Process ID: 20924
    Host:       n029
    PSIDATADIR: /opt/psi/4/1.9a/share/psi4
    Memory:     500.0 MiB
    Threads:    8
    
  ==> Input File <==

--------------------------------------------------------------------------
import math
import numpy as np

memory 20 GB

set reference rhf

molecule becp {
    0 1
    symmetry c1
 C    3.377399750010    1.005299840306   -0.715185929445
 C    3.377399750010    1.005299840306    0.714919056084
 C    3.377399750010   -0.361319760570    1.159124401200
 C    3.390217478973   -1.203593400818   -0.000150796093
 C    3.377501579575   -0.361327617107   -1.159390293293
 C   -3.379114096785    0.983443906080   -0.709034482617
 C   -3.378090724724    0.975630555007    0.720940359424
 C   -3.375970314681   -0.393220300942    1.157837055866
 C   -3.388280390436   -1.229408264092   -0.006067305615
 C   -3.377484778658   -0.380532412265   -1.160862185454
 H    3.380382258851    1.887259973554   -1.355464041013
 H    3.380278347944    1.887253613574    1.355203055297
 H    3.403359001494   -0.697868556790    2.195802326198
 H    3.388394307631   -2.293198696819   -0.000162316421
 H    3.403320802715   -0.697888275343   -2.196065203192
 H   -3.383146443284    1.869020106024   -1.344241724439
 H   -3.381403082708    1.854207788654    1.365802611069
 H   -3.402384292469   -0.735631203398    2.192581255016
 H   -3.387693056954   -2.319014549841   -0.012021120459
 H   -3.405471702937   -0.711646347065   -2.199238285099
Mg    1.369964752424    0.003027515210   -0.000016450616
Mg   -1.370277208974   -0.023879134755   -0.001080310946
 H   -0.009924855328    1.250833306130    0.002076248921
 H    0.010079893083   -1.276599718054   -0.003531297116
 H     -0.13744   -0.00096   -1.40224
 H     -0.20477    0.00882    1.64703
}

set CACHELEVEL 1
E, wfn = optimize("ccsd/cc-pVDZ", return_wfn = True)

becp.save_xyz_file("out/dimagnesocene_h4.xyz", True)

fstr = ""
with open("out/dimagnesocene_h4.xyz", "r") as fp :
    for line in fp :
        newline = line[0]
        for i in range(1, len(line)) :
            if line[i - 1].isupper() and line[i].isupper() :
                newline += line[i].lower()
            else :
                newline += line[i]
        fstr += newline

with open("out/dimagnesocene_h4.xyz", "w") as fp :
    print(fstr, file = fp)

wfn.to_file("out/dimagnesocene_h4.wf")
try:
    fchk(wfn, "out/dimagnesocene_h4.fchk")
except Exception :
    E, wfn = energy("hf/6-311g", return_wfn = True)
    fchk(wfn, "out/dimagnesocene_h4.fchk")

set cubeprop_tasks ["density"]
set CUBEPROP_FILE_PATH "/home/vulcan/cgb31826/git/Dimagnesocene/out/magnesium/dimagnesocene_h4"
cubeprop(wfn)
--------------------------------------------------------------------------

Traceback (most recent call last):
  File "/opt/psi/4/1.9a/bin/psi4", line 372, in <module>
    exec(content)

  File "<string>", line 76
    set CUBEPROP_FILE_PATH "/home/vulcan/cgb31826/git/Dimagnesocene/out/magnesium/dimagnesocene_h4"
        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax



!--------------------------------!
!                                !
!  invalid syntax                !
!                                !
!--------------------------------!

    Psi4 stopped on: Thursday, 21 September 2023 09:46AM
    Psi4 wall time for execution: 0:00:00.00

*** Psi4 encountered an error. Buy a developer more coffee!
*** Resources and help at github.com/psi4/psi4.
